--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dynamic QR Code</title>
-    <script>
-        const qrVersions = ["images/frame1.png", "images/frame2.png", "images/frame3.png", "images/frame4.png"];
+  <title>Dynamic QR Code for Google Form</title>
+  <script>
+    // Array referencing QR images in the repository root
+    const qrVersions = [
+      "frame1.png",
+      "frame2.png",
+      "frame3.png",
+      "frame4.png"
+    ];
 
-        function rotateQR() {
-            let currentIndex = localStorage.getItem('qrIndex') || 0;
-            currentIndex = parseInt(currentIndex);
+    // Function to rotate the QR code image
+    function rotateQR() {
+      // Retrieve the current index from localStorage or default to 0
+      let currentIndex = localStorage.getItem('qrIndex') || 0;
+      currentIndex = parseInt(currentIndex);
 
-            currentIndex = (currentIndex + 1) % qrVersions.length;
+      // Update the index to the next QR code (wrap around if needed)
+      currentIndex = (currentIndex + 1) % qrVersions.length;
+      localStorage.setItem('qrIndex', currentIndex);
 
-            localStorage.setItem('qrIndex', currentIndex);
+      // Update the displayed QR code image
+      document.getElementById('qrCode').src = qrVersions[currentIndex];
+    }
 
-            document.getElementById('qrCode').src = qrVersions[currentIndex];
-        }
+    window.onload = function() {
+      // Set the initial QR code on page load
+      let currentIndex = localStorage.getItem('qrIndex') || 0;
+      document.getElementById('qrCode').src = qrVersions[currentIndex];
 
-        window.onload = function() {
-            let currentIndex = localStorage.getItem('qrIndex') || 0;
-            document.getElementById('qrCode').src = qrVersions[currentIndex];
-        };
-    </script>
+      // Auto-refresh the QR code every 10 seconds (10000 milliseconds)
+      setInterval(rotateQR, 10000);
+    };
+  </script>
 </head>
 <body>
-    <h1>Scan the QR Code</h1>
-    <img id="qrCode" width="200">
-    <br>
-    <button onclick="rotateQR()">Refresh QR Code</button>
+  <h1>Dynamic QR Code for Google Form</h1>
+  
+  <!-- The anchor wraps the image, so when scanned it directs to your Google Form -->
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform?usp=sf_link" target="_blank">
+    <img id="qrCode" width="200" alt="QR Code">
+  </a>
+  
+  <!-- Optional: A manual refresh button -->
+  <br>
+  <button onclick="rotateQR()">Manual Refresh</button>
 </body>
 </html>
