--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
         document.body.innerHTML = "<p>This QR code has expired. Please scan a fresh code.</p>";
       } else {
         // The QR is still valid; redirect to your Google Form.
-        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform?usp=sf_link";
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform?usp=header";
       }
     };
   </script>
