--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
       // Hardcode the base URL of your GitHub Pages site.
       // Replace <yourusername> and <repository> with your actual values.
-      const baseUrl = "https://<yourusername>.github.io/<repository>/";
+      const baseUrl = "https://<Jenil05-web>.github.io/<swaminarayan-1>/";
       
       // Create the absolute URL for scan.html.
       const scanURL = baseUrl + "scan.html?token=" + token + "&expiry=" + expiry;
