--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dynamic One-Time QR Code Display</title>
+  <title>Scan Here to exit the Chatralay</title>
   <!-- Include the QRCode.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script>
@@ -49,10 +49,9 @@
   </script>
 </head>
 <body>
-  <h1>Dynamic One-Time QR Code Display</h1>
+  <h1>Scan Here to for exit form submmision</h1>
   <p>
-    Scan the QR code with your mobile device to open the Google Form.
-    (The QR code is valid for 20 seconds only.)
+    Scan the QR code with your mobile device . JAY SWAMINARAYAN
   </p>
   <div id="qrContainer"></div>
   <p id="expiryDisplay"></p>
