--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </script>
 </head>
 <body>
-  <h1>Scan Here to for exit form submmision</h1>
+  <h1>Scan Here to for exit form submmision!</h1>
   <p>
     Scan the QR code with your mobile device . JAY SWAMINARAYAN
   </p>
