--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   </script>
 </head>
 <body>
-  <h1>Scan Here to for exit form submmision!</h1>
+  <h1>Scan Here to for Entry details for student</h1>
   <p>
-    Scan the QR code with your mobile device . JAY SWAMINARAYAN
+    Scan the QR code with your mobile device. SHREE SWAMINARAYAN MAIN TEMPLE - VIDHYANAGAR
   </p>
   <div id="qrContainer"></div>
   <p id="expiryDisplay"></p>
