--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </script>
 </head>
 <body>
-  <h1>Scan Here to for Entry details for student</h1>
+  <h1>Scan Here to for Entry details.</h1>
   <p>
     Scan the QR code with your mobile device. SHREE SWAMINARAYAN MAIN TEMPLE - VIDHYANAGAR
   </p>
