--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       const expiry = Date.now() + 20000; // 20 seconds
 
       // Define the constant base Google Form URL.
-      const baseFormUrl = "YOUR_NEW_GOOGLE_FORM_URL";
+      const baseFormUrl = "https://docs.google.com/forms/d/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/edit";
       
       // Create the dynamic URL by appending token and expiry (even though the base remains constant).
       const dynamicUrl = baseFormUrl + "&token=" + token + "&expiry=" + expiry;
