--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       const baseUrl = "https://Jenil05-web.github.io/swaminarayan-1/";
 
       // Create the absolute URLs for scan.html, linking to different Google Forms.
-      const scanURL1 = baseUrl + "scan.html?token=" + token + "&expiry=" + expiry;
-      const scanURL2 = "YOUR_NEW_GOOGLE_FORM_URL"; // Replace with the new form link
+      const scanURL1 = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform"
+      const scanURL2 = "https://docs.google.com/forms/d/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/edit"; // Replace with the new form link
 
       // Optionally display expiry time for debugging.
       document.getElementById('expiryDisplay').innerText =
