--- a/index.html
+++ b/index.html
@@ -2,54 +2,49 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Scan Here to exit the Chatralay</title>
+  <title>Scan Here for Entry Details</title>
   <!-- Include the QRCode.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script>
-    // Generate a random token.
-    function generateToken() {
-      return Math.random().toString(36).substr(2, 9);
-    }
-
-    // Generate the QR codes.
+    // This function generates the two QR codes.
     function generateQRCodes() {
+      // Get the containers where the QR codes will be rendered.
       const qrContainer1 = document.getElementById("qrContainer1");
       const qrContainer2 = document.getElementById("qrContainer2");
-      qrContainer1.innerHTML = ""; // Clear previous QR code
-      qrContainer2.innerHTML = ""; // Clear previous QR code
 
-      const token = generateToken();
-      const expiry = Date.now() + 20000;
+      // Clear previously generated codes, so the old ones "expire"
+      qrContainer1.innerHTML = "";
+      qrContainer2.innerHTML = "";
 
-      // Hardcode the base URL of your GitHub Pages site.
-      const baseUrl = "https://Jenil05-web.github.io/swaminarayan-1/";
+      // These are the constant Google Form URLs.
+      const formUrl1 = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
+      const formUrl2 = "https://docs.google.com/forms/d/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/edit";
 
-      // Create the absolute URLs for scan.html, linking to different Google Forms.
-      const scanURL1 = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform"
-      const scanURL2 = "https://docs.google.com/forms/d/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/edit"; // Replace with the new form link
-
-      // Optionally display expiry time for debugging.
-      document.getElementById('expiryDisplay').innerText =
-        "Expires at: " + new Date(expiry).toLocaleTimeString();
-
-      // Generate the QR codes.
+      // Generate the first QR code (Existing QR Code).
       new QRCode(qrContainer1, {
-        text: scanURL1,
+        text: formUrl1,
         width: 200,
         height: 200,
         correctLevel: QRCode.CorrectLevel.H
       });
 
+      // Generate the second QR code (New QR Code).
       new QRCode(qrContainer2, {
-        text: scanURL2,
+        text: formUrl2,
         width: 200,
         height: 200,
         correctLevel: QRCode.CorrectLevel.H
       });
 
-      console.log("Generated QR Code URLs:", scanURL1, scanURL2);
+      // Optionally, display a message indicating when the next refresh will occur.
+      const nextRefresh = new Date(Date.now() + 20000);
+      document.getElementById("expiryDisplay").innerText =
+        "QR codes will refresh at: " + nextRefresh.toLocaleTimeString();
+      
+      console.log("QR codes generated for URLs:", formUrl1, formUrl2);
     }
 
+    // When the window loads, generate the codes once and then refresh every 20 seconds.
     window.onload = function() {
       generateQRCodes();
       setInterval(generateQRCodes, 20000);
