--- a/index.html
+++ b/index.html
@@ -6,55 +6,73 @@
   <!-- Include the QRCode.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script>
-    // Constant Google Form URLs for the two QR codes
-    const formUrl1 = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
-    const formUrl2 = "https://docs.google.com/forms/d/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/edit";
+    // Helper function to generate a random alphanumeric token
+    function generateToken() {
+      return Math.random().toString(36).substr(2, 9);
+    }
 
-    // Function to completely clear a container and generate a new child for the QR code
-    function generateQRCodeFor(containerId, url) {
-      const container = document.getElementById(containerId);
-      // Remove all existing children
-      while (container.firstChild) {
-        container.removeChild(container.firstChild);
-      }
-      // Create a new div element for the QR code
-      const newDiv = document.createElement("div");
-      container.appendChild(newDiv);
-      // Generate the QR code inside the new div
-      new QRCode(newDiv, {
-        text: url,
+    // This function refreshes both QR codes
+    function generateQRCodes() {
+      // Generate separate tokens and expiry for each QR code
+      const token1 = generateToken();
+      const token2 = generateToken();
+
+      // Set expiry to 20 seconds from now (in milliseconds)
+      const expiry1 = Date.now() + 20000;
+      const expiry2 = Date.now() + 20000;
+
+      // Constant base Google Form URLs for both QR codes
+      const baseFormUrl1 = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
+      const baseFormUrl2 = "https://docs.google.com/forms/d/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/edit";
+
+      // Build dynamic URLs which include token and expiry as query parameters:
+      const dynamicURL1 = baseFormUrl1 + "?token=" + token1 + "&expiry=" + expiry1;
+      const dynamicURL2 = baseFormUrl2 + "?token=" + token2 + "&expiry=" + expiry2;
+
+      // Clear previous QR codes by emptying the containers
+      const container1 = document.getElementById("qrContainer1");
+      const container2 = document.getElementById("qrContainer2");
+      container1.innerHTML = "";
+      container2.innerHTML = "";
+
+      // Generate the first QR code
+      new QRCode(container1, {
+        text: dynamicURL1,
         width: 200,
         height: 200,
         correctLevel: QRCode.CorrectLevel.H
       });
-    }
 
-    // Function to generate both QR codes and update the refresh time display
-    function generateQRCodes() {
-      // Regenerate both QR codes
-      generateQRCodeFor("qrContainer1", formUrl1);
-      generateQRCodeFor("qrContainer2", formUrl2);
+      // Generate the second QR code
+      new QRCode(container2, {
+        text: dynamicURL2,
+        width: 200,
+        height: 200,
+        correctLevel: QRCode.CorrectLevel.H
+      });
 
-      // Update refresh time message
+      // Optionally display a message showing when the next refresh will occur
       const nextRefresh = new Date(Date.now() + 20000);
       document.getElementById("expiryDisplay").innerText =
         "QR codes will refresh at: " + nextRefresh.toLocaleTimeString();
 
-      console.log("QR codes regenerated at", new Date().toLocaleTimeString());
+      // Log the generated URLs for debugging purposes
+      console.log("QR Code 1 URL:", dynamicURL1);
+      console.log("QR Code 2 URL:", dynamicURL2);
     }
 
-    // When the window loads, generate the QR codes immediately and then every 20 seconds
-    window.addEventListener("load", function() {
+    // On window load, generate the QR codes immediately, then refresh every 20 seconds.
+    window.onload = function() {
       generateQRCodes();
       setInterval(generateQRCodes, 20000);
-    });
+    };
   </script>
 </head>
 <body>
   <h1>Scan Here for Entry Details</h1>
   <h3>Existing QR Code</h3>
   <div id="qrContainer1"></div>
-
+  
   <h3>New QR Code</h3>
   <div id="qrContainer2"></div>
   
