--- a/scan.html
+++ b/scan.html
@@ -4,39 +4,41 @@
   <meta charset="UTF-8">
   <title>QR Code Scan</title>
   <script>
-    window.onload = function() {
+    window.addEventListener("load", function() {
       // Parse URL query parameters.
-      const urlParams = new URLSearchParams(window.location.search);
-      const token = urlParams.get("token");
-      const expiryStr = urlParams.get("expiry");
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get("token");
+      const expiryStr = params.get("expiry");
 
-      // Ensure required parameters exist.
-      if (!token || !expiryStr) {
-        document.body.innerHTML = "<p>Error: Missing scan parameters.</p>";
+      // Ensure both token and expiry exist and expiry is valid.
+      if (!token || !expiryStr || isNaN(parseInt(expiryStr, 10))) {
+        document.body.innerHTML = "<p>Error: Missing or invalid scan parameters.</p>";
         return;
       }
 
       // Convert the expiry parameter to a number.
       const expiry = parseInt(expiryStr, 10);
       const now = Date.now();
-      console.log("Current time:", now, "Expiry:", expiry);
+
+      console.log("Current time:", now, "Expiry time:", expiry);
 
       // Check if the current time has exceeded the expiry time.
       if (now > expiry) {
-        // If expired, show an error message.
+        // If expired, show an error message and do not redirect.
         document.body.innerHTML = "<p>This QR code has expired. Please scan a fresh code.</p>";
       } else {
-        // If the QR code is still valid, proceed to load the Google Form.
-        // Replace the below URL with your form's link if needed.
+        // If the QR code is still valid, show a message and then redirect.
+        document.body.innerHTML = "<p>QR code is valid. Redirecting to the form...</p>";
+
+        // Replace formUrl with your desired Google Form link.
         const formUrl = "https://docs.google.com/forms/d/e/1yf0ccQD4kPVM1368aFG-E3cM6mcHiHMv0HVbWTTK4G4/viewform";
-        document.body.innerHTML = `<p>QR code is valid. Redirecting to the form...</p>`;
         
-        // Optionally redirect after a brief delay.
+        // Redirect after a short delay.
         setTimeout(() => {
           window.location.href = formUrl;
         }, 1500);
       }
-    };
+    });
   </script>
 </head>
 <body>
