--- a/scan.html
+++ b/scan.html
@@ -6,32 +6,32 @@
   <script>
     window.onload = function() {
       // Parse URL query parameters.
-      const urlParams = new URLSearchParams(window.location.search);
-      const token = urlParams.get("token");
-      const expiry = parseInt(urlParams.get("expiry"), 10);
-      
-      // Ensure required parameters exist.
-      if (!token || !expiry) {
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get("token");
+      const expiryStr = params.get("expiry");
+
+      // Validate parameters.
+      if (!token || !expiryStr) {
         document.body.innerHTML = "<p>Error: Invalid QR code parameters.</p>";
         return;
       }
-      
-      // Check if the current time is less than the expiry.
-      if (Date.now() > expiry) {
-        document.body.innerHTML = "<p>This QR code has expired. Please scan a fresh code.</p>";
-      } else {
-        // Define the new Google Form link.
-        const newFormUrl = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
 
-        // Generate QR code and display it.
-        document.body.innerHTML = `<p>Scan the QR code below to access the form:</p>
-          <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=${encodeURIComponent(newFormUrl)}" alt="QR Code">
-          <p>If the QR code doesn't work, click <a href="${newFormUrl}">here</a> to access the form.</p>`;
+      const expiry = parseInt(expiryStr, 10);
+      const now = Date.now();
+
+      // Check if the QR code is expired.
+      if (now > expiry) {
+        document.body.innerHTML = "<p>This QR code has expired. Please scan a fresh code.</p>";
+        return;
       }
+
+      // If the QR code is valid, automatically redirect to the Google Form.
+      // Replace the URL below with your actual Google Form link.
+      window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
     };
   </script>
 </head>
 <body>
-  <p>Processing your scan... please wait.</p>
+  <p>Processing your scan, please wait...</p>
 </body>
 </html>
