--- a/scan.html
+++ b/scan.html
@@ -5,35 +5,27 @@
   <title>QR Code Scan</title>
   <script>
     window.onload = function () {
-      // Define the Google Form URL.
-      const googleFormURL = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
-      
-      // Mobile detection based on the user agent.
-      var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-      
-      if (isMobile) {
-        // For mobile devices, immediately open the Google Form.
-        window.location.href = googleFormURL;
+      // Parse URL query parameters.
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get("token");
+      const expiryStr = params.get("expiry");
+
+      // Check that necessary parameters exist.
+      if (!token || !expiryStr) {
+        document.body.innerHTML = "<p>Error: Invalid QR code parameters.</p>";
+        return;
+      }
+
+      // Convert expiry to a number.
+      const expiry = parseInt(expiryStr, 10);
+      const now = Date.now();
+
+      // Check if the QR code has expired.
+      if (now > expiry) {
+        document.body.innerHTML = "<p>This QR code has expired. Please scan a fresh code.</p>";
       } else {
-        // For non-mobile devices, verify token and expiry.
-        const params = new URLSearchParams(window.location.search);
-        const token = params.get("token");
-        const expiryStr = params.get("expiry");
-
-        if (!token || !expiryStr) {
-          document.body.innerHTML = "<p>Error: Invalid QR code parameters.</p>";
-          return;
-        }
-
-        const expiry = parseInt(expiryStr, 10);
-        const now = Date.now();
-
-        if (now > expiry) {
-          document.body.innerHTML = "<p>This QR code has expired. Please scan a fresh code.</p>";
-        } else {
-          // If still valid, redirect to the Google Form.
-          window.location.href = googleFormURL;
-        }
+        // If the QR code is still valid, redirect to the Google Form.
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSf94jLm-MBSgrAgYRMKn9kPyonZdAB8IrTq-ODmLd0QFYHPug/viewform";
       }
     };
   </script>
