--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
   <!-- Dynamic QR Code Section -->
   <div class="qr-section">
-    <h2>Dynamic QR Code (Expires every 20 seconds)</h2>
+    <h2>Entry QR Code  SHREE SWAMINARAYAN MAIN TEMPLE - VIDHYANAGAR</h2>
     <div id="qrContainer"></div>
     <p id="expiryDisplay"></p>
   </div>
@@ -92,7 +92,7 @@
   
   <!-- Static QR Code Section -->
   <div class="qr-section">
-    <h2>Static QR Code for Second Google Form</h2>
+    <h2>exit QR Code for Second Google Form</h2>
     <div id="qrContainerStatic"></div>
   </div>
 </body>
