--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   
   <!-- Static QR Code Section -->
   <div class="qr-section">
-    <h2>exit QR Code for Second Google Form</h2>
+    <h1>Exit QR Code</h1>
     <div id="qrContainerStatic"></div>
   </div>
 </body>
